samples/errors/invalid_tokens.gem
-- invalid_tokens.gem
start
  print "Hello, World!" @ # $  -- Invalid tokens
finish